# sheets-report

./: .gitignore  LICENSE  README.md  pyproject.toml
shared/pdfs/: PDFS.md
src/: dataframe_service.py  main.py  path_handler.py  report_generator.py
src/core/: path_handler.py
src/services/: csv_converter_service.py  dataframe_service.py
