[project]
name = "sheets-report"
version = "0.1.0"
description = ""
authors = [
    {name = "Juan Ferreira",email = "juanferreiraverao@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "weasyprint (>=68.1,<69.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
